[metadata]
name = calcvol
url = https://github.com/neurorepro/calcvol
version = 0.0.1
author = Michael Dayan
author_email = michael.dayan@fcbg.ch
description = Compute total NIFTI image volume
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
platforms = OS Independent
classifiers =
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering

[options]
python_requires = >=3.6
install_requires =
    nibabel >=2.1
    numpy

packages = find:
include_package_data = True

[options.entry_points]
console_scripts =
    calcvol = calcvol.__main__:main
